Minor fix for some layout issues with Options row

--- a/css/explorpc.less
+++ b/css/explorpc.less
@@ -114,7 +114,7 @@
 		.explorpc-options label, .explorpc-url label, .explorpc-auth label, .explorpc-method label {
 			display: table;
 			width: 100%;
-			input, span { display: table-cell; }
+			select, input, span { display: table-cell; }
 			span { width: 4.5em; }
 		}
 		.explorpc-url input, .explorpc-method input { 
